--- a/package.json
+++ b/package.json
@@ -9,23 +9,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@material-tailwind/react": "^1.2.2",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@tanstack/react-query": "^4.0.10",
-    "@tanstack/react-query-devtools": "^4.0.10",
+    "@reduxjs/toolkit": "^1.8.5",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.1.7-beta.1",
+    "react-redux": "^8.0.2",
     "react-router-dom": "6"
   },
   "devDependencies": {
-    "@types/react": "^18.0.15",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
+    "@types/node": "^18.7.7",
+    "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
     "autoprefixer": "^10.4.8",
+    "babel-jest": "^28.1.3",
+    "chalk": "^5.0.1",
+    "jest": "^28.1.3",
     "postcss": "^8.4.16",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.1.8",
+    "typescript": "^4.7.4",
     "vite": "^3.0.0"
   }
 }
