--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@reduxjs/toolkit": "^1.8.5",
+    "@mui/lab": "5.0.0-alpha.120",
+    "@mui/material": "^5.11.10",
+    "@mui/styles": "^5.11.9",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.1.7-beta.1",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "6"
+    "react-router": "^6.8.1",
+    "react-router-dom": "6",
+    "zustand": "^4.3.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.18.10",
